...
    },
    "Add List": {
      "comment": "A button label that says \"Add List\".",
      "isCommentAutoGenerated": true
    },
    "Add more items to continue": {},
    "Add new item": {
      "comment": "A button that allows the user to add a new item to a list.",
      "extractionState": "manual",
      "isCommentAutoGenerated": true,
      "localizations": {
        "en": {
          "stringUnit": {
...
            "value": "Add new item"
          }
        },
        "fi": {
          "stringUnit": {
            "state": "translated",
            "value": "Lisää uusi tuote"
          }
        }
      }
    },
    "Add Photo": {
      "comment": "A title displayed at the top of the view.",
...
          }
        }
      }
    },
    "Enable Touch ID in System Settings to use app security features.": {},
    "Enables multi-item selection for bulk operations": {},
    "Enter item name": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Enter item name"
          }
        },
        "fi": {
          "stringUnit": {
            "state": "translated",
            "value": "Syötä tuotteen nimi"
          }
        }
      }
    },
    "Enter list name": {
      "comment": "A placeholder text for a text field where a user can enter a name for a new list.",
...
